--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI = mongodb+srv://admincancerologia:admin2023@cancerologiaroosevelt.e7pgaky.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_URI = mongodb+srv://admincancerologia:admin2023@cancerologiaroosevelt.e7pgaky.mongodb.net/?retryWrites=true&w=majority
+
+MONGODB_URI = mongodb+srv://admincancerologia:admin2023@cancerologiaroosevelt.e7pgaky.mongodb.net/FarmacoVigilanciaApp?retryWrites=true&w=majority
